outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-28_00-20-56/evaluations/problem_eval-1104361258949810665_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of the detour penalty based on the remaining number of unvisited nodes, ensuring a balance between proximity to the destination and minimizing detours as the tour progresses.}
                                                                                                                                                                                             ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of the detour penalty based on the remaining number of unvisited nodes, ensuring a balance between proximity to the destination and minimizing detours as the tour progresses.}
                                                                                                                                                                                             ^
SyntaxError: unmatched '}'
